--- a/file/index.html
+++ b/file/index.html
@@ -36,7 +36,7 @@
 	   Your browser isn't invited for super fun audio time.
     </audio>
     <div class="balloons text-center" id="b1">
-    	<h2 style="color:#F2B300;"></h2>
+    	<h2 style="color:#F2B300;">*</h2>
     </div>
     <div class="balloons text-center" id="b2">
     	<h2 style="color:#0719D4;">N</h2>
@@ -51,7 +51,7 @@
     	<h2 style="color:#8377E4;">A</h2>
     </div>
     <div class="balloons text-center" id="b6">
-    	<h2 style="color:#99C96A;"></h2>
+    	<h2 style="color:#99C96A;">*</h2>
     </div>
     <!-- <div class="balloons text-center" id="b7">
     	<h2 style="color:#20CFB4;"></h2>
@@ -107,7 +107,7 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
-				<p>Halo  Dev ... </p>
+				<p>Halo  Nis ... </p>
 				<p>Hari ini...</p>
 				<p>Sebenere hari biasa</p>
 				<p>Tapi</p>
@@ -138,7 +138,7 @@
 		<div class="navbar navbar-fixed-bottom">
 			<div class="row">
 				<div class="col-md-6 text-center col-md-offset-3">
-					<button class="btn btn-primary" id="turn_on">Ayo Tekan Dev</button>
+					<button class="btn btn-primary" id="turn_on">Ayo Tekan Nis</button>
 					<button class="btn btn-primary" id="play">Putar Music</button>
 					<button class="btn btn-primary" id="bannar_coming">Kasih Hiasan dikit</button>
 					<button class="btn btn-primary" id="balloons_flying">Lepaskan Balonnya</button>
