--- a/file/index.html
+++ b/file/index.html
@@ -39,16 +39,16 @@
     	<h2 style="color:#F2B300;">*</h2>
     </div>
     <div class="balloons text-center" id="b2">
-    	<h2 style="color:#0719D4;">N</h2>
+    	<h2 style="color:#0719D4;">J</h2>
     </div>
 	<div class="balloons text-center" id="b3">
-    	<h2 style="color:#D14D39;">I</h2>
+    	<h2 style="color:#D14D39;">O</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">S</h2>
+    	<h2 style="color:#8FAD00;">K</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">A</h2>
+    	<h2 style="color:#8377E4;">O</h2>
     </div>
     <div class="balloons text-center" id="b6">
     	<h2 style="color:#99C96A;">*</h2>
