--- a/file/index.html
+++ b/file/index.html
@@ -39,16 +39,16 @@
     	<h2 style="color:#F2B300;">*</h2>
     </div>
     <div class="balloons text-center" id="b2">
-    	<h2 style="color:#0719D4;">J</h2>
+    	<h2 style="color:#0719D4;">N</h2>
     </div>
 	<div class="balloons text-center" id="b3">
-    	<h2 style="color:#D14D39;">O</h2>
+    	<h2 style="color:#D14D39;">I</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">K</h2>
+    	<h2 style="color:#8FAD00;">S</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">O</h2>
+    	<h2 style="color:#8377E4;">A</h2>
     </div>
     <div class="balloons text-center" id="b6">
     	<h2 style="color:#99C96A;">*</h2>
@@ -127,12 +127,17 @@
 				<p>I wish you all the best</p>
 				<p>Dan semoga semua harapanmu terkabul</p>
 				<p>Jangan lupa</p>
-				<p>Punya kostan 20 kamar itu susah</p>
+				<p>Ada orang tua yang harus bahagia</p>
 				<p>Makannya kerja keras</p>
+				<p>Semoga cepet selesai skripsinya</p>
+				<p>Semoga sehat selalu</p>
+				<p>Semoga jadi insan yang lebih baik</p>
+				<p>Dan jadi yang terbaik</p>
+				<p><strong>Wilujeng Khoerunnisa</strong></p>
 				<p><strong>SEMANGAT</strong></p>
 				<p>-Pasti Bisa-</p>
 				<p>Dan satu lagi</p>
-				<p>Selamat Ulang Tahun Ke 20</p>
+				<p>Selamat Ulang Tahun Ke 22</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
