--- a/file/index.html
+++ b/file/index.html
@@ -132,8 +132,11 @@
 				<p>Semoga cepet selesai skripsinya</p>
 				<p>Semoga sehat selalu</p>
 				<p>Semoga jadi insan yang lebih baik</p>
-				<p>Dan jadi yang terbaik</p>
+				<p>Dan tetap jadi yang terbaik</p>
 				<p><strong>Wilujeng Khoerunnisa</strong></p>
+				<p>Kamu udah tambah dewasa</p>
+				<p>Pasti makin banyak masalahnya</p>
+				<p>Tapi kamu wanita hebat</p>
 				<p><strong>SEMANGAT</strong></p>
 				<p>-Pasti Bisa-</p>
 				<p>Dan satu lagi</p>
